--- a/index.html
+++ b/index.html
@@ -58,9 +58,27 @@
     <article>
         <div class="row">
             <div class="col-lg-8 cajaArticulos">
+                <br />
                 <div class="row">
                     <div class="col-lg-12" id="articulo1">
-                        Articulo1
+                        <br />
+                        <div class="row">
+                            <div class="col-lg-8">
+                                <h2>Tributo a los Beatles</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="img/beatles.jpg" id="beatles" />
+                            </div>
+                        </div>
+                        <br />
+                        <div class="row">
+                            <div class="col-lg-12 col-sm-12">
+                                <i class='fas fa-user-circle usuario'></i>
+                                <textarea placeholder="comentario" cols="49"></textarea>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-lg-12" id="articulo2">
                         Articulo2
