--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <article>
         <div class="row">
             <div class="col-lg-8 cajaArticulos">
-                <br />
+               
                 <div class="row">
                     <div class="col-lg-12" id="articulo1">
                         <br />
@@ -81,7 +81,24 @@
                         </div>
                     </div>
                     <div class="col-lg-12" id="articulo2">
-                        Articulo2
+                        <br />
+                        <div class="row">
+                            <div class="col-lg-8">
+                                <h2>El Sistema Solar</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="img/SS.jpg" id="ss" />
+                            </div>
+                        </div>
+                        <br />
+                        <div class="row">
+                            <div class="col-lg-12 col-sm-12">
+                                <i class='fas fa-user-circle usuario'></i>
+                                <textarea placeholder="comentario" cols="49"></textarea>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -123,6 +140,39 @@
                         </div>
                         <div class="col-lg-12 cajaTopicos">
                             <a class="nav-link btn-outline-success" href="#item-1">Item 9</a>
+                        </div>
+                        <div class="col-lg-12 cajaTopicos">
+                            <a class="nav-link btn-outline-success" href="#item-1">Item 10</a>
+                        </div>
+                        <div class="col-lg-12 cajaTopicos">
+                            <a class="nav-link btn-outline-success" href="#item-1">Item 11</a>
+                        </div>
+                        <div class="col-lg-12 cajaTopicos">
+                            <a class="nav-link btn-outline-success" href="#item-1">Item 12</a>
+                        </div>
+                        <div class="col-lg-12 cajaTopicos">
+                            <a class="nav-link btn-outline-success" href="#item-1">Item 13</a>
+                        </div>
+                        <div class="col-lg-12 cajaTopicos">
+                            <a class="nav-link btn-outline-success" href="#item-1">Item 14</a>
+                        </div>
+                        <div class="col-lg-12 cajaTopicos">
+                            <a class="nav-link btn-outline-success" href="#item-1">Item 15</a>
+                        </div>
+                        <div class="col-lg-12 cajaTopicos">
+                            <a class="nav-link btn-outline-success" href="#item-1">Item 16</a>
+                        </div>
+                        <div class="col-lg-12 cajaTopicos">
+                            <a class="nav-link btn-outline-success" href="#item-1">Item 17</a>
+                        </div>
+                        <div class="col-lg-12 cajaTopicos">
+                            <a class="nav-link btn-outline-success" href="#item-1">Item 18</a>
+                        </div>
+                        <div class="col-lg-12 cajaTopicos">
+                            <a class="nav-link btn-outline-success" href="#item-1">Item 19</a>
+                        </div>
+                        <div class="col-lg-12 cajaTopicos">
+                            <a class="nav-link btn-outline-success" href="#item-1">Item 20</a>
                         </div>
                     </div>
                 </nav>
